# SPOS-Course

./: .gitignore  README.md
lab1/: CMakeLists.txt  f.cpp  g.cpp  main.cpp  readme.md
lab1/cancellator/: cancellator.h  periodic_cancellator.h  simple_cancellator.h
lab1/demofuncs/: demofuncs.h
lab1/f_process/: CMakeLists.txt  f.cpp
lab1/function/: demofuncs.h
lab1/function/function_manager/: CMakeLists.txt  function_manager.cpp
lab1/g_process/: CMakeLists.txt  g.cpp
lab1/manager/: basic_manager.h  extended_manager.h  manager.h
lab1/operation/: binary_operation.h  group_operation.h  variadic_operation.h
lab3/: README.md  settings.gradle
lab3/src/main/java/: Process.java  Scheduling.java  SchedulingAlgorithm.java  guaranteed_scheduling.md  guaranteed_scheduling.txt  sProcess.java
lab3/src/main/resources/: Summary-Processes  Summary-Results  scheduling.conf
lab4/: fixed_bugs.md  settings.gradle
lab4/src/main/java/: ControlPanel.java  Kernel.java  MemoryManagement.java  PageFault.java  Utils.java
lab4/src/main/resources/: commands  memory.conf  tracefile
